[#28] test: 메시지 목록 조회 테스트
- 목록 조회 시, 애플리케이션에서 정상적으로 순서가 반전이 되는지 테스트